# spectrum-lang

./: .gitignore  CMakeLists.txt  run-test.sh
src/java/: identifier.cpp  identifier.h
src/java/ast/: CMakeLists.txt  identifier.cpp  identifier.h  identifier.hpp  type.cpp  type.h  type.hpp
test/: main.cpp
test/java/: identifier_test.cpp
test/java/ast/: identifier_test.cpp  type_test.cpp
